platform_versioned_docs/version-4.2.0/administer/users-permissions/permissions/project.mdx
---
title: Project Membership
sidebar_label: Projects
sidebar_position: 2
---

import Flow, { Step } from "@site/src/components/Flow";
import NavStep from "@site/src/components/NavStep";
import Label from "@site/src/components/Label";
import Button from "@site/src/components/Button";

Members are users or teams that are granted access to a project. Each member is assigned a role that
define their permissions. These roles will be granted to each of the [allowed clusters](../../projects/allowed/clusters.mdx) of the
project. Only users and teams that are members of the project have access to the project's
allowed clusters.

## Project Roles

There are 3 default roles available for every project.

| Name           | Create New Spaces / Virtual Clusters | Access Spaces / Virtual Clusters        | Create Without Template | Create With Template | Access to Project Secrets                           |
| -------------- | ------------------------------------ | --------------------------------------- | ----------------------- | -------------------- | --------------------------------------------------- |
| Project Admin  | Yes                                  | All Spaces and Virtual Clusters         | Yes                     | Yes                  | Yes                                                 |
| Project User   | Yes                                  | Only owned and with explicit permission | No                      | Yes                  | Yes                                                 |
| Project Viewer | No                                   | Only with explicit permission           | No                      | No                   | Only in Spaces and Virtual Clusters with permission |

Global admins can change these existing roles as well as add new project roles in the Users section of the platform.

## Users

Any user can be made members of a project. Follow the instructions below to add and assign roles to users, or
remove them from the project.

### Adding Users

<Flow id="project-add-user">
  <Step>
    Select the project you'd like to configure using the drop down menu. Click on <Label>Settings</Label>.
  </Step>
  <Step>
    Click on <NavStep>Members</NavStep>.
  </Step>
  <Step>
    Click on the <NavStep>Users</NavStep> tab.
  </Step>
  <Step>
    Click the <Label>Users</Label> input and select the user to add. The table
    below will update to add the selected user. If you wish to change this manually, you may edit the YAML directly.
  </Step>
  <Step>
    Select the role to assign the user.
  </Step>
  <Step>
    Once all project options have been specified, click the{" "}
    <Button>Save Changes</Button>.
  </Step>
</Flow>

:::note All Users
Instead of adding every user, a special selection named `All Users` can be used to give all platform users access to the project. Use this option with caution.
:::

### Removing Users

<Flow id="project-remove-user">
  <Step>
    Select the project you'd like to configure using the drop down menu. Click on <Label>Settings</Label>.
  </Step>
  <Step>
    Click on <NavStep>Members</NavStep>.
  </Step>
  <Step>
    Click on the <NavStep>Users</NavStep> tab.
  </Step>
  <Step>
    Click the trash can icon next to the user that you'd like to remove. If you wish to change this manually, you may edit the YAML directly.
  </Step>
  <Step>
    Once all project options have been specified, click the{" "}
    <Button>Save Changes</Button>.
  </Step>
</Flow>

## Teams

Instead of having to assign individual users, teams can be used to assign multiple users to a proejct.

### Adding Teams


<Flow id="project-add-team">
  <Step>
    Select the project you'd like to configure using the drop down menu. Click on <Label>Settings</Label>.
  </Step>
  <Step>
    Click on <NavStep>Members</NavStep>.
  </Step>
  <Step>
    Click on the <NavStep>Teams</NavStep> tab.
  </Step>
  <Step>
    Click the <Label>Teams</Label> input and select the team to add. The table
    below will update to include the selected team. If you wish to change this manually, you may edit the YAML directly.
  </Step>
  <Step>
    Select the role to assign the team.
  </Step>
  <Step>
    Once all project options have been specified, click the{" "}
    <Button>Save Changes</Button>.
  </Step>
</Flow>

### Removing Teams


<Flow id="project-remove-team">
  <Step>
    Select the project you'd like to configure using the drop down menu. Click on <Label>Settings</Label>.
  </Step>
  <Step>
    Click on <NavStep>Members</NavStep>.
  </Step>
  <Step>
    Click on the <NavStep>Teams</NavStep> tab
  </Step>
  <Step>
    Click the trash can icon next to the team that you'd like to remove. If you wish to change this manually, you may edit the YAML directly.
  </Step>
  <Step>
    Once all project options have been specified, click the{" "}
    <Button>Save Changes</Button>.
  </Step>
</Flow>
