platform_versioned_docs/version-4.8.0/administer/users-permissions/permissions/project.mdx
---
title: Project Membership
sidebar_label: Projects
sidebar_position: 2
---

import Flow, { Step } from "@site/src/components/Flow";
import NavStep from "@site/src/components/NavStep";
import Label from "@site/src/components/Label";
import Button from "@site/src/components/Button";

Members are users or teams that are granted access to a project. Each member is assigned a role that
define their permissions. These roles will be granted to each of the [allowed clusters](../../projects/allowed/clusters.mdx) of the
project. Only users and teams that are members of the project have access to the project's
allowed clusters.

If you don't have a project, you can create one by following instructions [here](../../secrets/project/create).

## Project Roles

There are 3 default roles available for every project.

| Name           | Create New Spaces / Virtual Clusters | Access Spaces / Virtual Clusters        | Create Without Template | Create With Template | Access to Project Secrets                           |
| -------------- | ------------------------------------ | --------------------------------------- | ----------------------- | -------------------- | --------------------------------------------------- |
| Project admin  | Yes                                  | All Spaces and Virtual Clusters         | Yes                     | Yes                  | Yes                                                 |
| Project User   | Yes                                  | Only owned and with explicit permission | No                      | Yes                  | Yes                                                 |
| Project Viewer | No                                   | Only with explicit permission           | No                      | No                   | Only in Spaces and Virtual Clusters with permission |

Global admins can change these existing roles as well as add new project roles in the Users section of the platform.
<Flow id="project-add-project-role">
  <Step>
    Click the <NavStep>Users</NavStep> at the botton of the left sidebar.
  </Step>
  <Step>
    In the Users page, click the <NavStep>Global Roles</NavStep> at the top. Then click the <NavStep>Create Role</NavStep>.
  </Step>
  <Step>
    Fill the display name of the role and other information if necessary.
:::warning
The created role will be a global role by default. To create the role as a project role, add the `loft.sh/project-role: 'true'` in the labels of the role CRD configuration on the right side of the page.
```yaml title="Add the project role configuration"
apiVersion: management.loft.sh/v1
kind: ClusterRoleTemplate
metadata:
  name: ''
  labels:
    loft.sh/project-role: 'true'
spec:
  management: true
```
    :::
  </Step>
  <Step>
    Click the <NavStep>Create Role</NavStep> button at the right bottom of the page.
  </Step>
  <Step>
    If you created a project role, you can click the <NavStep>Project Settings</NavStep>, and then find the display name of the created project role in the dropdown menu of the role for each member under the Members and Roles section.
  </Step>
</Flow>

## Users

Any user can be made members of a project. Follow the instructions below to add and assign roles to users, or
remove them from the project.

### Add users

<Flow id="project-add-user">
  <Step>
    Select the project you'd like to configure using the drop down menu. Click on <Label>Settings</Label>.
  </Step>
  <Step>
    Click on <NavStep>Members</NavStep>.
  </Step>
  <Step>
    Click on the <NavStep>Users</NavStep> tab.
  </Step>
  <Step>
    Click the <Label>Users</Label> input and select the user to add. The table
    below will update to add the selected user. If you wish to change this manually, you may edit the YAML directly.
  </Step>
  <Step>
    Select the role to assign the user.
  </Step>
  <Step>
    Once all project options have been specified, click the{" "}
    <Button>Save Changes</Button>.
  </Step>
</Flow>

:::note All Users
Instead of adding every user, a special selection named `All Users` can be used to give all platform users access to the project. Use this option with caution.
:::

### Remove users

<Flow id="project-remove-user">
  <Step>
    Select the project you'd like to configure using the drop down menu. Click on <Label>Settings</Label>.
  </Step>
  <Step>
    Click on <NavStep>Members</NavStep>.
  </Step>
  <Step>
    Click on the <NavStep>Users</NavStep> tab.
  </Step>
  <Step>
    Click the trash can icon next to the user that you'd like to remove. If you wish to change this manually, you may edit the YAML directly.
  </Step>
  <Step>
    Once all project options have been specified, click the{" "}
    <Button>Save Changes</Button>.
  </Step>
</Flow>

## Teams

Instead of having to assign individual users, teams can be used to assign multiple users to a proejct.

### Add teams


<Flow id="project-add-team">
  <Step>
    Select the project you'd like to configure using the drop down menu. Click on <Label>Settings</Label>.
  </Step>
  <Step>
    Click on <NavStep>Members</NavStep>.
  </Step>
  <Step>
    Click on the <NavStep>Teams</NavStep> tab.
  </Step>
  <Step>
    Click the <Label>Teams</Label> input and select the team to add. The table
    below will update to include the selected team. If you wish to change this manually, you may edit the YAML directly.
  </Step>
  <Step>
    Select the role to assign the team.
  </Step>
  <Step>
    Once all project options have been specified, click the{" "}
    <Button>Save Changes</Button>.
  </Step>
</Flow>

### Remove teams


<Flow id="project-remove-team">
  <Step>
    Select the project you'd like to configure using the drop down menu. Click on <Label>Settings</Label>.
  </Step>
  <Step>
    Click on <NavStep>Members</NavStep>.
  </Step>
  <Step>
    Click on the <NavStep>Teams</NavStep> tab
  </Step>
  <Step>
    Click the trash can icon next to the team that you'd like to remove. If you wish to change this manually, you may edit the YAML directly.
  </Step>
  <Step>
    Once all project options have been specified, click the{" "}
    <Button>Save Changes</Button>.
  </Step>
</Flow>
